[gd_scene load_steps=11 format=3 uid="uid://7pbu3m2f4nfr"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_e1tw1"]
[ext_resource type="PackedScene" uid="uid://d0nmhojnw88sl" path="res://ui/pause_menu/pause_menu.tscn" id="2_b2xs7"]
[ext_resource type="Script" path="res://resources/nodes/undo_manager.gd" id="2_s8lla"]
[ext_resource type="PackedScene" uid="uid://bu03m6i3nfgh3" path="res://player/player.tscn" id="3_j5vv5"]
[ext_resource type="Texture2D" uid="uid://cf2ensfq8keac" path="res://ui/sprites/next_level_prompt.png" id="5_o4yjd"]
[ext_resource type="Texture2D" uid="uid://uok6yxg0qbyc" path="res://ui/sprites/pause.png" id="5_qjxx0"]
[ext_resource type="Script" path="res://ui/standalone_scripts/pause_button.gd" id="6_wye2u"]
[ext_resource type="TileSet" uid="uid://bbykwo35isbtl" path="res://resources/tileset/tiles.tres" id="7_nj4fy"]

[sub_resource type="InputEventAction" id="InputEventAction_ehgyd"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_8hpc7"]
events = [SubResource("InputEventAction_ehgyd")]

[node name="Level" type="Node2D"]
script = ExtResource("1_e1tw1")

[node name="UndoManager" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("2_s8lla")
player = NodePath("../Player")

[node name="UI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="NextLevelPrompt" type="TextureRect" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -51.0
offset_right = 101.0
offset_bottom = -8.0
grow_vertical = 0
texture = ExtResource("5_o4yjd")
expand_mode = 1
stretch_mode = 5

[node name="MoveCount" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 16.0
offset_right = 56.0
offset_bottom = 32.0

[node name="PauseButton" type="TextureButton" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_top = 8.0
offset_right = -7.0
offset_bottom = 24.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_8hpc7")
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("5_qjxx0")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_wye2u")
pause_menu = ExtResource("2_b2xs7")

[node name="TileMap" type="TileMap" parent="."]
z_index = -2
z_as_relative = false
tile_set = ExtResource("7_nj4fy")
format = 2
layer_0/name = "World"
layer_0/tile_data = PackedInt32Array(917530, 589824, 2, 851994, 589824, 2, 786458, 589824, 2, 720922, 589824, 2, 655386, 589824, 2, 589850, 589824, 2, 524314, 589824, 2, 458778, 589824, 2, 393242, 589824, 2, 327706, 589824, 2, 262170, 589824, 2, 196634, 589824, 2, 131098, 589824, 2, 65562, 589824, 2, 26, 589824, 2, 917529, 589824, 2, 851993, 589824, 2, 786457, 589824, 2, 720921, 589824, 2, 655385, 589824, 2, 589849, 589824, 2, 524313, 589824, 2, 458777, 589824, 2, 393241, 589824, 2, 327705, 589824, 2, 262169, 589824, 2, 196633, 589824, 2, 131097, 589824, 2, 65561, 589824, 2, 25, 589824, 2, 917528, 589824, 2, 851992, 589824, 2, 786456, 589824, 2, 720920, 589824, 2, 655384, 589824, 2, 589848, 589824, 2, 524312, 589824, 2, 458776, 589824, 2, 393240, 589824, 2, 327704, 589824, 2, 262168, 589824, 2, 196632, 589824, 2, 131096, 589824, 2, 65560, 589824, 2, 24, 589824, 2, 917527, 589824, 2, 851991, 589824, 2, 786455, 589824, 2, 720919, 589824, 2, 655383, 589824, 2, 589847, 589824, 2, 524311, 589824, 2, 458775, 589824, 2, 393239, 589824, 2, 327703, 589824, 2, 262167, 589824, 2, 196631, 589824, 2, 131095, 589824, 2, 65559, 589824, 2, 23, 589824, 2, 917526, 589824, 2, 851990, 589824, 2, 786454, 589824, 2, 720918, 589824, 2, 655382, 589824, 2, 589846, 589824, 2, 524310, 589824, 2, 458774, 589824, 2, 393238, 589824, 2, 327702, 589824, 2, 262166, 589824, 2, 196630, 589824, 2, 131094, 589824, 2, 65558, 589824, 2, 22, 589824, 2, 917525, 589824, 2, 851989, 589824, 2, 786453, 589824, 2, 720917, 589824, 2, 655381, 589824, 2, 589845, 589824, 2, 524309, 589824, 2, 458773, 589824, 2, 393237, 589824, 2, 327701, 589824, 2, 262165, 589824, 2, 196629, 589824, 2, 131093, 589824, 2, 65557, 589824, 2, 21, 589824, 2, 917524, 589824, 2, 851988, 589824, 2, 786452, 589824, 2, 720916, 589824, 2, 655380, 589824, 2, 589844, 589824, 2, 524308, 589824, 2, 458772, 589824, 2, 393236, 589824, 2, 327700, 589824, 2, 262164, 589824, 2, 196628, 589824, 2, 131092, 589824, 2, 65556, 589824, 2, 20, 589824, 2, 917523, 589824, 2, 851987, 589824, 2, 786451, 589824, 2, 720915, 589824, 2, 655379, 589824, 2, 589843, 589824, 2, 524307, 589824, 2, 458771, 589824, 2, 393235, 589824, 2, 327699, 589824, 2, 262163, 589824, 2, 196627, 589824, 2, 131091, 589824, 2, 65555, 589824, 2, 19, 589824, 2, 917522, 589824, 2, 851986, 589824, 2, 786450, 589824, 2, 720914, 589824, 2, 655378, 589824, 2, 589842, 589824, 2, 524306, 589824, 2, 458770, 589824, 2, 393234, 589824, 2, 327698, 589824, 2, 262162, 589824, 2, 196626, 589824, 2, 131090, 589824, 2, 65554, 589824, 2, 18, 589824, 2, 917521, 589824, 2, 851985, 589824, 2, 786449, 589824, 2, 720913, 589824, 2, 655377, 589824, 2, 589841, 589824, 2, 524305, 589824, 2, 458769, 589824, 2, 393233, 589824, 2, 327697, 589824, 2, 262161, 589824, 2, 196625, 589824, 2, 131089, 589824, 2, 65553, 589824, 2, 17, 589824, 2, 917520, 589824, 2, 851984, 589824, 2, 786448, 589824, 2, 720912, 589824, 2, 655376, 589824, 2, 589840, 589824, 2, 524304, 589824, 2, 458768, 589824, 2, 393232, 589824, 2, 327696, 589824, 2, 262160, 589824, 2, 196624, 589824, 2, 131088, 589824, 2, 65552, 589824, 2, 16, 589824, 2, 917519, 589824, 2, 851983, 589824, 2, 786447, 589824, 2, 720911, 589824, 2, 655375, 589824, 2, 589839, 589824, 2, 524303, 589824, 2, 458767, 589824, 2, 393231, 589824, 2, 327695, 589824, 2, 262159, 589824, 2, 196623, 589824, 2, 131087, 589824, 2, 65551, 589824, 2, 15, 589824, 2, 917518, 589824, 2, 851982, 589824, 2, 786446, 589824, 2, 720910, 589824, 2, 655374, 589824, 2, 589838, 589824, 2, 524302, 589824, 2, 458766, 589824, 2, 393230, 589824, 2, 327694, 589824, 2, 262158, 589824, 2, 196622, 589824, 2, 131086, 589824, 2, 65550, 589824, 2, 14, 589824, 2, 917517, 589824, 2, 851981, 589824, 2, 786445, 589824, 2, 720909, 589824, 2, 655373, 589824, 2, 589837, 589824, 2, 524301, 589824, 2, 458765, 589824, 2, 393229, 589824, 2, 327693, 589824, 2, 262157, 589824, 2, 196621, 589824, 2, 131085, 589824, 2, 65549, 589824, 2, 13, 589824, 2, 917516, 589824, 2, 851980, 589824, 2, 786444, 589824, 2, 720908, 589824, 2, 655372, 589824, 2, 589836, 589824, 2, 524300, 589824, 2, 458764, 589824, 2, 393228, 589824, 2, 327692, 589824, 2, 262156, 589824, 2, 196620, 589824, 2, 131084, 589824, 2, 65548, 589824, 2, 12, 589824, 2, 917515, 589824, 2, 851979, 589824, 2, 786443, 589824, 2, 720907, 589824, 2, 655371, 589824, 2, 589835, 589824, 2, 524299, 589824, 2, 458763, 589824, 2, 393227, 589824, 2, 327691, 589824, 2, 262155, 589824, 2, 196619, 589824, 2, 131083, 589824, 2, 65547, 589824, 2, 11, 589824, 2, 917514, 589824, 2, 851978, 589824, 2, 786442, 589824, 2, 720906, 589824, 2, 655370, 589824, 2, 589834, 589824, 2, 524298, 589824, 2, 458762, 589824, 2, 393226, 589824, 2, 327690, 589824, 2, 262154, 589824, 2, 196618, 589824, 2, 131082, 589824, 2, 65546, 589824, 2, 10, 589824, 2, 917513, 589824, 2, 851977, 589824, 2, 786441, 589824, 2, 720905, 589824, 2, 655369, 589824, 2, 589833, 589824, 2, 524297, 589824, 2, 458761, 589824, 2, 393225, 589824, 2, 327689, 589824, 2, 262153, 589824, 2, 196617, 589824, 2, 131081, 589824, 2, 65545, 589824, 2, 9, 589824, 2, 917512, 589824, 2, 851976, 589824, 2, 786440, 589824, 2, 720904, 589824, 2, 655368, 589824, 2, 589832, 589824, 2, 524296, 589824, 2, 458760, 589824, 2, 393224, 589824, 2, 327688, 589824, 2, 262152, 589824, 2, 196616, 589824, 2, 131080, 589824, 2, 65544, 589824, 2, 8, 589824, 2, 917511, 589824, 2, 851975, 589824, 2, 786439, 589824, 2, 720903, 589824, 2, 655367, 589824, 2, 589831, 589824, 2, 524295, 589824, 2, 458759, 589824, 2, 393223, 589824, 2, 327687, 589824, 2, 262151, 589824, 2, 196615, 589824, 2, 131079, 589824, 2, 65543, 589824, 2, 7, 589824, 2, 917510, 589824, 2, 851974, 589824, 2, 786438, 589824, 2, 720902, 589824, 2, 655366, 589824, 2, 589830, 589824, 2, 524294, 589824, 2, 458758, 589824, 2, 393222, 589824, 2, 327686, 589824, 2, 262150, 589824, 2, 196614, 589824, 2, 131078, 589824, 2, 65542, 589824, 2, 6, 589824, 2, 917509, 589824, 2, 851973, 589824, 2, 786437, 589824, 2, 720901, 589824, 2, 655365, 589824, 2, 589829, 589824, 2, 524293, 589824, 2, 458757, 589824, 2, 393221, 589824, 2, 327685, 589824, 2, 262149, 589824, 2, 196613, 589824, 2, 131077, 589824, 2, 65541, 589824, 2, 5, 589824, 2, 917508, 589824, 2, 851972, 589824, 2, 786436, 589824, 2, 720900, 589824, 2, 655364, 589824, 2, 589828, 589824, 2, 524292, 589824, 2, 458756, 589824, 2, 393220, 589824, 2, 327684, 589824, 2, 262148, 589824, 2, 196612, 589824, 2, 131076, 589824, 2, 65540, 589824, 2, 4, 589824, 2, 917507, 589824, 2, 851971, 589824, 2, 786435, 589824, 2, 720899, 589824, 2, 655363, 589824, 2, 589827, 589824, 2, 524291, 589824, 2, 458755, 589824, 2, 393219, 589824, 2, 327683, 589824, 2, 262147, 589824, 2, 196611, 589824, 2, 131075, 589824, 2, 65539, 589824, 2, 3, 589824, 2, 917506, 589824, 2, 851970, 589824, 2, 786434, 589824, 2, 720898, 589824, 2, 655362, 589824, 2, 589826, 589824, 2, 524290, 589824, 2, 458754, 589824, 2, 393218, 589824, 2, 327682, 589824, 2, 262146, 589824, 2, 196610, 589824, 2, 131074, 589824, 2, 65538, 589824, 2, 2, 589824, 2, 917505, 589824, 2, 851969, 589824, 2, 786433, 589824, 2, 720897, 589824, 2, 655361, 589824, 2, 589825, 589824, 2, 524289, 589824, 2, 458753, 589824, 2, 393217, 589824, 2, 327681, 589824, 2, 262145, 589824, 2, 196609, 589824, 2, 131073, 589824, 2, 65537, 589824, 2, 1, 589824, 2, 917504, 589824, 2, 851968, 589824, 2, 786432, 589824, 2, 720896, 589824, 2, 655360, 589824, 2, 589824, 589824, 2, 524288, 589824, 2, 458752, 589824, 2, 393216, 589824, 2, 327680, 589824, 2, 262144, 589824, 2, 196608, 589824, 2, 131072, 589824, 2, 65536, 589824, 2, 0, 589824, 2)
layer_1/name = "Cubes"
layer_1/tile_data = PackedInt32Array()

[node name="Player" parent="." groups=["player"] instance=ExtResource("3_j5vv5")]
unique_name_in_owner = true
position = Vector2(216, 121)

[connection signal="ready" from="." to="UndoManager" method="_on_tree_ready"]
[connection signal="move_count_changed" from="UndoManager" to="." method="_on_undo_manager_move_count_changed"]
[connection signal="pressed" from="UI/PauseButton" to="UI/PauseButton" method="_on_pause_button_pressed"]
[connection signal="did_action" from="Player" to="UndoManager" method="_on_player_did_action"]
